# bitty

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  readme.md  vcpkg-configuration.json  vcpkg.json
include/: cell.hh  cell_buffer.hh  charset.hh  config.hh  escape_parser.hh  events.hh  font_renderer.hh  gl_program.hh  index_alloc.hh  term_renderer.hh  terminal.hh  tex_coord.hh  utf8_parser.hh  util.hh
shaders/: buf_fragment.glsl  buf_vertex.glsl  cursor_fragment.glsl  cursor_vertex.glsl
src/: cell_buffer.cc  charset.cc  config.cc  escape_parser.cc  events.cc  font_renderer.cc  gl_program.cc  main.cc  term_renderer.cc  terminal.cc  terminal_unix.cc  util.cc
